--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <artifactId>stripe-java</artifactId>
             <version>24.0.0</version>
         </dependency>
+
+			<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20250107</version>
+</dependency>
 	</dependencies>
 
 	<build>
