--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,47 @@
+############### 
+#Nombre Aplicacion
+#Puerto de Servicio
+#Dominio de Servicio
+###############
 spring.application.name=payments
+server.port = 8003
+server.address=0.0.0.0
+APP_URL=http://localhost:8003
+
+##############
+#AJustes Servidor Tomcat
+##############
+server.tomcat.threads.max=200
+server.tomcat.connection-timeout=5s
+server.max-http-request-header-size=8KB
+server.tomcat.max-swallow-size=2MB
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.file-date-format=yyyy-MM-dd
+server.tomcat.accesslog.prefix=logs
+server.tomcat.accesslog.suffix=.log
+
+############### 
+#Opciones para debug app
+###############
+#logging.level.root=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.main.allow-bean-definition-overriding=true
+
+############### 
+#SQL Server
+###############
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=disoft;encrypt=true;trustServerCertificate=true;loginTimeout=30;
+spring.datasource.username=sa
+spring.datasource.password=disoft2025
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+############### 
+#Configuracion JPA
+###############
+spring.jpa.show-sql=false
+# Hibernate ddl auto (none, create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.defer-datasource-initialization=true
