--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
     <artifactId>json</artifactId>
     <version>20250107</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+<dependency>
+    <groupId>org.apache.httpcomponents.client5</groupId>
+    <artifactId>httpclient5</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
