--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
+##############################
+# Perfil por defecto de la aplicacion
+#
+# dev: funciona con lo que hay con la config de application.properties
+# + application-dev.properties
+#
+# prod: funciona con lo que hay con la config de application.properties
+# + application-prod.properties
+##############################
+spring.profiles.active=dev
+
 ############### 
 #Nombre Aplicacion
-#Puerto de Servicio
-#Dominio de Servicio
+#IP y Puerto de Servicio
 ###############
 spring.application.name=payments
 server.port = 8003
 server.address=0.0.0.0
-APP_URL=http://localhost:8003
 
 ##############
 #AJustes Servidor Tomcat
@@ -28,20 +37,3 @@ server.tomcat.accesslog.suffix=.log
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.main.allow-bean-definition-overriding=true
-
-############### 
-#SQL Server
-###############
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=disoft;encrypt=true;trustServerCertificate=true;loginTimeout=30;
-spring.datasource.username=sa
-spring.datasource.password=disoft2025
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-
-############### 
-#Configuracion JPA
-###############
-spring.jpa.show-sql=false
-# Hibernate ddl auto (none, create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.defer-datasource-initialization=true
