--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,11 @@
 # Url de la app
 APP_URL=https://qcode.kexo.org
+
+############### 
+#SQL Server
+###############
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=disoft;encrypt=true;trustServerCertificate=true;loginTimeout=30;
+spring.datasource.username=sa
+spring.datasource.password=disoft2025
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
