--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,5 @@
-##############################
-# Perfil por defecto de la aplicacion
-#
-# dev: funciona con lo que hay con la config de application.properties
-# + application-dev.properties
-#
-# prod: funciona con lo que hay con la config de application.properties
-# + application-prod.properties
-##############################
-spring.profiles.active=dev
+# Url de la app
+APP_URL=http://localhost:4200
 
 ############### 
 #Nombre Aplicacion
@@ -37,3 +29,16 @@ server.tomcat.accesslog.suffix=.log
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.main.allow-bean-definition-overriding=true
+
+##############
+#H2 Database
+##############
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/dbmanager
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=true
